--- a/E_Commerce_Bookstore/Web.config
+++ b/E_Commerce_Bookstore/Web.config
@@ -7,7 +7,7 @@
 
 	<!-- 🔹 Configuración de cadena de conexión -->
 	<appSettings>
-		<add key="cadenaConexion" value="server=.\SQLEXPRESS; database=Aca Base de datosssssssssssss; integrated security=true" />
+		<add key="cadenaConexion" value="server=.\SQLEXPRESS; database=BOOKSTORE_DB; integrated security=true" />
 	</appSettings>
 
 	<!-- 🔹 Configuración general de ASP.NET -->
@@ -28,6 +28,7 @@
 	<system.webServer>
 		<defaultDocument>
 			<files>
+				<remove value="Default.aspx" />
 				<add value="Default.aspx" />
 			</files>
 		</defaultDocument>
