se hizo catalogo funcional con conexion a BOOKSTORE_DB - Se corrigio clase AccesoDatos y conexion Web.config - Se implementaron LibroNegocio y CategoriaNegocio - Se actualizo página Catalogo.aspx con buscador y cards

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -48,7 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccesoDato.cs" />
+    <Compile Include="AccesoDatos.cs" />
+    <Compile Include="CategoriaNegocio.cs" />
+    <Compile Include="LibroNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
