Columna seleccion para DGV

--- a/E_Commerce_Bookstore/E_Commerce_Bookstore.csproj
+++ b/E_Commerce_Bookstore/E_Commerce_Bookstore.csproj
@@ -68,11 +68,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Administracion.aspx" />
+    <Content Include="BestSeller.aspx" />
     <Content Include="Carrito.aspx" />
     <Content Include="Catalogo.aspx" />
+    <Content Include="Categorias.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Detalle.aspx" />
     <Content Include="GestionProducto.aspx" />
+    <Content Include="Ofertas.aspx" />
+    <Content Include="Populares.aspx" />
     <Content Include="ProcesoEnvio.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -83,6 +87,13 @@
     </Compile>
     <Compile Include="Administracion.aspx.designer.cs">
       <DependentUpon>Administracion.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="BestSeller.aspx.cs">
+      <DependentUpon>BestSeller.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="BestSeller.aspx.designer.cs">
+      <DependentUpon>BestSeller.aspx</DependentUpon>
     </Compile>
     <Compile Include="Carrito.aspx.cs">
       <DependentUpon>Carrito.aspx</DependentUpon>
@@ -97,6 +108,13 @@
     </Compile>
     <Compile Include="Catalogo.aspx.designer.cs">
       <DependentUpon>Catalogo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Categorias.aspx.cs">
+      <DependentUpon>Categorias.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Categorias.aspx.designer.cs">
+      <DependentUpon>Categorias.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -118,6 +136,20 @@
     </Compile>
     <Compile Include="GestionProducto.aspx.designer.cs">
       <DependentUpon>GestionProducto.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Ofertas.aspx.cs">
+      <DependentUpon>Ofertas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Ofertas.aspx.designer.cs">
+      <DependentUpon>Ofertas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Populares.aspx.cs">
+      <DependentUpon>Populares.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Populares.aspx.designer.cs">
+      <DependentUpon>Populares.aspx</DependentUpon>
     </Compile>
     <Compile Include="ProcesoEnvio.aspx.cs">
       <DependentUpon>ProcesoEnvio.aspx</DependentUpon>
