--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CategoriaNegocio.cs" />
     <Compile Include="LibroNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidacionGestion.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
