--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="CategoriaNegocio.cs" />
+    <Compile Include="DetalleNegocio.cs" />
     <Compile Include="LibroNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidacionGestion.cs" />
