--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="CategoriaNegocio.cs" />
     <Compile Include="LibroNegocio.cs" />
+    <Compile Include="PedidoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidacionGestion.cs" />
   </ItemGroup>
