feat: integracion completa de login/registro y ajustes en flujo de compra
feat: integracion completa de login/registro y ajustes en flujo de compra

- Se agrego pagina MiCuenta.aspx con formularios de Login y Registro visibles simultaneamente
- Se crearon clases ClienteNegocio y CarritoNegocio (validaciones y creacion de carrito activo)
- Se simplificaron consultas SQL (toda la logica ahora se maneja desde C#)
- Se actualizaron ConfirmacionCompra, ProcesoEnvio, ProcesoPago y MisPedidos
- Se incluyeron pequeñas correcciones en PedidoNegocio

--- a/E_Commerce_Bookstore/Web.config
+++ b/E_Commerce_Bookstore/Web.config
@@ -5,10 +5,16 @@
 -->
 <configuration>
 
+
 	<!-- 🔹 Configuración de cadena de conexión -->
 	<appSettings>
 		<add key="cadenaConexion" value="server=.\SQLEXPRESS; database=BOOKSTORE_DB; integrated security=true" />
+		
+		<add key="MP_ACCESS_TOKEN" value="TEST-xxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
 	</appSettings>
+
+	
+
 
 	<!-- 🔹 Configuración general de ASP.NET -->
 	<system.web>
