Agrego carpeta helpers con clase CookieHelper para obtener un cookieId de sesion, para que al crear un carrito sin loguearse guarde en la bd con cookieId y quede vinculado al dispositivo, creo los metodos en CarritoNegocio necesarios para buscar, crear, guardar y actualizar en la bd carrito y itemCarrito desde, Site.Master(Busca y Actualiza Badge), Catalogo, Detalle, Carrito, MiCuenta(Agrega IdCliente al carrito activo) y ProcesoDePago(Actualiza el carrito a Inactivo y ademas descuenta del stock del Libro la cantidad comprada).

--- a/E_Commerce_Bookstore/E_Commerce_Bookstore.csproj
+++ b/E_Commerce_Bookstore/E_Commerce_Bookstore.csproj
@@ -172,6 +172,7 @@
     <Compile Include="GestionVentas.aspx.designer.cs">
       <DependentUpon>GestionVentas.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CookieHelper.cs" />
     <Compile Include="MiCuenta.aspx.cs">
       <DependentUpon>MiCuenta.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
