Modifico la capa de dominio, Agregando Clase Autor y Editorial (sugerencia de la profe), Eliminando Compra y CompraDetalle, y ligeros cambios en las propiedades Libro, Pedido, Envio y Usuario(Adecuando a las nuevas clases y el futuro desarrollo de lo que nos queda por hacer, segun lo acordado), En esta instancia el programa no compila, nos debemos repartir la tarea de adecuar toda la logica y las consultas a la nueva estructura de Dominio y Base De Datos

--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -47,11 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Autor.cs" />
     <Compile Include="CarritoCompra.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
-    <Compile Include="Compra.cs" />
-    <Compile Include="CompraDetalle.cs" />
+    <Compile Include="Editorial.cs" />
     <Compile Include="Envio.cs" />
     <Compile Include="ItemCarrito.cs" />
     <Compile Include="Libro.cs" />
