--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Libro.cs" />
     <Compile Include="Pago.cs" />
     <Compile Include="Pedido.cs" />
+    <Compile Include="PedidoDetalle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuario.cs" />
