Desplegables para Autor, Editorial y Categoria con conexion a DB

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -49,10 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
+    <Compile Include="AutorNegocio.cs" />
     <Compile Include="CarritoNegocio.cs" />
     <Compile Include="CategoriaNegocio.cs" />
     <Compile Include="ClienteNegocio.cs" />
     <Compile Include="DetalleNegocio.cs" />
+    <Compile Include="EditorialNegocio.cs" />
     <Compile Include="LibroNegocio.cs" />
     <Compile Include="PedidoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
