Boton para agregar nuevos autores con gestion completa

--- a/E_Commerce_Bookstore/E_Commerce_Bookstore.csproj
+++ b/E_Commerce_Bookstore/E_Commerce_Bookstore.csproj
@@ -77,6 +77,7 @@
     <Content Include="Detalle.aspx" />
     <Content Include="DetallePedido.aspx" />
     <Content Include="Error.aspx" />
+    <Content Include="GestionAutor.aspx" />
     <Content Include="GestionProducto.aspx" />
     <Content Include="GestionVentas.aspx" />
     <Content Include="MiCuenta.aspx" />
@@ -161,6 +162,13 @@
     </Compile>
     <Compile Include="Error.aspx.designer.cs">
       <DependentUpon>Error.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GestionAutor.aspx.cs">
+      <DependentUpon>GestionAutor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GestionAutor.aspx.designer.cs">
+      <DependentUpon>GestionAutor.aspx</DependentUpon>
     </Compile>
     <Compile Include="GestionProducto.aspx.cs">
       <DependentUpon>GestionProducto.aspx</DependentUpon>
