--- a/E_Commerce_Bookstore/E_Commerce_Bookstore.csproj
+++ b/E_Commerce_Bookstore/E_Commerce_Bookstore.csproj
@@ -79,6 +79,7 @@
     <Content Include="Error.aspx" />
     <Content Include="GestionAutor.aspx" />
     <Content Include="GestionCategoria.aspx" />
+    <Content Include="GestionEditorial.aspx" />
     <Content Include="GestionProducto.aspx" />
     <Content Include="GestionVentas.aspx" />
     <Content Include="MiCuenta.aspx" />
@@ -177,6 +178,13 @@
     </Compile>
     <Compile Include="GestionCategoria.aspx.designer.cs">
       <DependentUpon>GestionCategoria.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GestionEditorial.aspx.cs">
+      <DependentUpon>GestionEditorial.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GestionEditorial.aspx.designer.cs">
+      <DependentUpon>GestionEditorial.aspx</DependentUpon>
     </Compile>
     <Compile Include="GestionProducto.aspx.cs">
       <DependentUpon>GestionProducto.aspx</DependentUpon>
