Implementacion completa de facturacion - Se crea clase Factura en Dominio - Se agrega FacturaNegocio con metodos CrearFactura y ObtenerFacturaPorPedido - Se integra facturacion en el flujo de compra (ProcesoEnvio -> ProcesoPago) - Se corrigen nombres de sesion y validaciones obligatorias - Se ajusta ConfirmacionCompra para no usar labels inexistentes - Se asegura carga obligatoria de datos de facturacion - Limpieza de codigo viejo en MisPedidos (removido idCliente=1)

--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="Editorial.cs" />
     <Compile Include="Envio.cs" />
+    <Compile Include="Factura.cs" />
     <Compile Include="ItemCarrito.cs" />
     <Compile Include="Libro.cs" />
     <Compile Include="Pago.cs" />
