--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Pago.cs" />
     <Compile Include="Pedido.cs" />
     <Compile Include="PedidoDetalle.cs" />
+    <Compile Include="PedidoDetalleDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuario.cs" />
