--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CarritoCompra.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="ClienteGestionDTO.cs" />
     <Compile Include="Editorial.cs" />
     <Compile Include="Envio.cs" />
     <Compile Include="Factura.cs" />
