--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -62,6 +62,7 @@
     <Compile Include="PedidoDetalleNegocio.cs" />
     <Compile Include="PedidoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validaciones.cs" />
     <Compile Include="ValidacionGestion.cs" />
   </ItemGroup>
   <ItemGroup>
