--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuario.cs" />
+    <Compile Include="UsuarioDTO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
